--- a/webstat/awstats.avm-agro.pp.ua.allrobots.032016.html
+++ b/webstat/awstats.avm-agro.pp.ua.allrobots.032016.html
@@ -53,7 +53,7 @@ a:hover   { color: #605040; text-decoration: underline; }
 <tr><td>
 <table class="aws_data sortable" border="0" cellpadding="1" cellspacing="0" width="100%">
 <tr><td class="aws" valign="middle"><b>Statistics for:</b>&nbsp;</td><td class="aws" valign="middle"><span style="font-size: 14px;">avm-agro.pp.ua</span></td><td align="right" rowspan="3"><a href="http://awstats.sourceforge.net" target="awstatshome"><img src="/awstatsicons/other/awstats_logo6.png" border="0" alt='Awstats Web Site' title='Awstats Web Site' /></a></td></tr>
-<tr valign="middle"><td class="aws" valign="middle" width="150"><b>Last Update:</b>&nbsp;</td><td class="aws" valign="middle"><span style="font-size: 12px;">15 Mar 2016 - 00:07</span></td></tr>
+<tr valign="middle"><td class="aws" valign="middle" width="150"><b>Last Update:</b>&nbsp;</td><td class="aws" valign="middle"><span style="font-size: 12px;">17 Mar 2016 - 00:06</span></td></tr>
 <tr><td class="aws" valign="middle"><b>Reported period:</b></td><td class="aws" valign="middle"><span style="font-size: 14px;">Month Mar 2016</span></td></tr>
 </table>
 </td></tr></table>
@@ -68,9 +68,10 @@ a:hover   { color: #605040; text-decoration: underline; }
 <tr><td class="aws_title" width="70%">Robots/Spiders visitors </td><td class="aws_blank">&nbsp;</td></tr>
 <tr><td colspan="2">
 <table class="aws_data" border="1" cellpadding="2" cellspacing="0" width="100%">
-<tr bgcolor="#ECECEC"><th>1 different robots</th><th bgcolor="#66DDEE" width="80">Hits</th><th class="datasize" bgcolor="#2EA495" width="80">Bandwidth</th><th width="120">Last visit</th></tr>
-<tr><td class="aws">FavIconizer</td><td>15</td><td>54.20 KB</td><td>14 Mar 2016 - 19:26</td></tr>
-</table></td></tr></table><span style="font: 11px verdana, arial, helvetica;">* Robots shown here gave hits or traffic "not viewed" by visitors, so they are not included in other charts.</span><br />
+<tr bgcolor="#ECECEC"><th>2 different robots</th><th bgcolor="#66DDEE" width="80">Hits</th><th class="datasize" bgcolor="#2EA495" width="80">Bandwidth</th><th width="120">Last visit</th></tr>
+<tr><td class="aws"><a href="http://www.google.com/bot.html" title="Bot home page [new window]" target="_blank">Googlebot</a></td><td>278+1</td><td>3.46 MB</td><td>16 Mar 2016 - 05:09</td></tr>
+<tr><td class="aws">FavIconizer</td><td>19</td><td>69.81 KB</td><td>16 Mar 2016 - 10:34</td></tr>
+</table></td></tr></table><span style="font: 11px verdana, arial, helvetica;">* Robots shown here gave hits or traffic "not viewed" by visitors, so they are not included in other charts. Numbers after + are successful hits on "robots.txt" files.</span><br />
 <br />
 
 <br /><br />
