--- a/webstat/awstats.avm-agro.pp.ua.browserdetail.032016.html
+++ b/webstat/awstats.avm-agro.pp.ua.browserdetail.032016.html
@@ -53,7 +53,7 @@ a:hover   { color: #605040; text-decoration: underline; }
 <tr><td>
 <table class="aws_data sortable" border="0" cellpadding="1" cellspacing="0" width="100%">
 <tr><td class="aws" valign="middle"><b>Statistics for:</b>&nbsp;</td><td class="aws" valign="middle"><span style="font-size: 14px;">avm-agro.pp.ua</span></td><td align="right" rowspan="3"><a href="http://awstats.sourceforge.net" target="awstatshome"><img src="/awstatsicons/other/awstats_logo6.png" border="0" alt='Awstats Web Site' title='Awstats Web Site' /></a></td></tr>
-<tr valign="middle"><td class="aws" valign="middle" width="150"><b>Last Update:</b>&nbsp;</td><td class="aws" valign="middle"><span style="font-size: 12px;">15 Mar 2016 - 00:07</span></td></tr>
+<tr valign="middle"><td class="aws" valign="middle" width="150"><b>Last Update:</b>&nbsp;</td><td class="aws" valign="middle"><span style="font-size: 12px;">17 Mar 2016 - 00:06</span></td></tr>
 <tr><td class="aws" valign="middle"><b>Reported period:</b></td><td class="aws" valign="middle"><span style="font-size: 14px;">Month Mar 2016</span></td></tr>
 </table>
 </td></tr></table>
@@ -70,17 +70,25 @@ a:hover   { color: #605040; text-decoration: underline; }
 <tr bgcolor="#ECECEC"><th colspan="2">Versions</th><th width="80">Grabber</th><th bgcolor="#66DDEE" width="80">Hits</th><th bgcolor="#66DDEE" width="80">Percent</th><th>&nbsp;</th></tr>
 <tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>MSIE</b></td><td>&nbsp;</td><td><b>53</b></td><td><b>0 %</b></td><td>&nbsp;</td></tr>
 <tr><td width="32"><img src="/awstatsicons/browser/msie.png" alt='' title='' /></td><td class="aws">Msie 10.0</td><td>No</td><td>53</td><td>0 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
-<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>FIREFOX</b></td><td>&nbsp;</td><td><b>2010</b></td><td><b>3.3 %</b></td><td>&nbsp;</td></tr>
-<tr><td><img src="/awstatsicons/browser/firefox.png" alt='' title='' /></td><td class="aws">Firefox 44.0</td><td>No</td><td>2010</td><td>3.3 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="10" height="5" /><br /></td></tr>
-<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>NETSCAPE</b></td><td>&nbsp;</td><td><b>5</b></td><td><b>0 %</b></td><td>&nbsp;</td></tr>
-<tr><td><img src="/awstatsicons/browser/netscape.png" alt='' title='' /></td><td class="aws">Netscape 5.0</td><td>No</td><td>5</td><td>0 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
-<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>CHROME</b></td><td>&nbsp;</td><td><b>57905</b></td><td><b>96.4 %</b></td><td>&nbsp;</td></tr>
+<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>FIREFOX</b></td><td>&nbsp;</td><td><b>2447</b></td><td><b>3 %</b></td><td>&nbsp;</td></tr>
+<tr><td><img src="/awstatsicons/browser/firefox.png" alt='' title='' /></td><td class="aws">Firefox 44.0</td><td>No</td><td>2065</td><td>2.6 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="9" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/browser/firefox.png" alt='' title='' /></td><td class="aws">Firefox 33.0</td><td>No</td><td>382</td><td>0.4 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>NETSCAPE</b></td><td>&nbsp;</td><td><b>6</b></td><td><b>0 %</b></td><td>&nbsp;</td></tr>
+<tr><td><img src="/awstatsicons/browser/netscape.png" alt='' title='' /></td><td class="aws">Netscape 5.0</td><td>No</td><td>6</td><td>0 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>OPERA</b></td><td>&nbsp;</td><td><b>2</b></td><td><b>0 %</b></td><td>&nbsp;</td></tr>
+<tr><td><img src="/awstatsicons/browser/opera.png" alt='' title='' /></td><td class="aws">Opera 9.7</td><td>No</td><td>2</td><td>0 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>SAFARI</b></td><td>&nbsp;</td><td><b>12908</b></td><td><b>16.3 %</b></td><td>&nbsp;</td></tr>
+<tr><td><img src="/awstatsicons/browser/safari.png" alt='' title='' /></td><td class="aws">Safari 8.0</td><td>No</td><td>12908</td><td>16.3 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="55" height="5" /><br /></td></tr>
+<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>CHROME</b></td><td>&nbsp;</td><td><b>63534</b></td><td><b>80.4 %</b></td><td>&nbsp;</td></tr>
 <tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 50.0.2661.26</td><td>No</td><td>52</td><td>0 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
-<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 49.0.2623.87</td><td>No</td><td>138</td><td>0.2 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
-<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 48.0.2564.116</td><td>No</td><td>56905</td><td>94.8 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="261" height="5" /><br /></td></tr>
-<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 48.0.2564.109</td><td>No</td><td>207</td><td>0.3 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
-<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 48.0.2564.82</td><td>No</td><td>435</td><td>0.7 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
-<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 46.0.2490.76</td><td>No</td><td>159</td><td>0.2 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 49.0.2623.87</td><td>No</td><td>387</td><td>0.4 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 48.0.2564.116</td><td>No</td><td>61630</td><td>78 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="261" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 48.0.2564.109</td><td>No</td><td>207</td><td>0.2 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 48.0.2564.82</td><td>No</td><td>435</td><td>0.5 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 47.0.2526.83</td><td>No</td><td>115</td><td>0.1 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 47.0.2526.73</td><td>No</td><td>161</td><td>0.2 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 46.0.2490.76</td><td>No</td><td>423</td><td>0.5 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 46.0.2486.0</td><td>No</td><td>115</td><td>0.1 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
 <tr><td><img src="/awstatsicons/browser/chrome.png" alt='' title='' /></td><td class="aws">Chrome 42.0.2311.135</td><td>No</td><td>9</td><td>0 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
 <tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>Others</b></td><td>&nbsp;</td><td><b>53</b></td><td><b>0 %</b></td><td>&nbsp;</td></tr>
 <tr><td><img src="/awstatsicons/browser/mozilla.png" alt='' title='' /></td><td class="aws">Mozilla</td><td>No</td><td>52</td><td>0 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
