--- a/webstat/awstats.avm-agro.pp.ua.osdetail.032016.html
+++ b/webstat/awstats.avm-agro.pp.ua.osdetail.032016.html
@@ -53,7 +53,7 @@ a:hover   { color: #605040; text-decoration: underline; }
 <tr><td>
 <table class="aws_data sortable" border="0" cellpadding="1" cellspacing="0" width="100%">
 <tr><td class="aws" valign="middle"><b>Statistics for:</b>&nbsp;</td><td class="aws" valign="middle"><span style="font-size: 14px;">avm-agro.pp.ua</span></td><td align="right" rowspan="3"><a href="http://awstats.sourceforge.net" target="awstatshome"><img src="/awstatsicons/other/awstats_logo6.png" border="0" alt='Awstats Web Site' title='Awstats Web Site' /></a></td></tr>
-<tr valign="middle"><td class="aws" valign="middle" width="150"><b>Last Update:</b>&nbsp;</td><td class="aws" valign="middle"><span style="font-size: 12px;">15 Mar 2016 - 00:07</span></td></tr>
+<tr valign="middle"><td class="aws" valign="middle" width="150"><b>Last Update:</b>&nbsp;</td><td class="aws" valign="middle"><span style="font-size: 12px;">17 Mar 2016 - 00:06</span></td></tr>
 <tr><td class="aws" valign="middle"><b>Reported period:</b></td><td class="aws" valign="middle"><span style="font-size: 14px;">Month Mar 2016</span></td></tr>
 </table>
 </td></tr></table>
@@ -68,16 +68,17 @@ a:hover   { color: #605040; text-decoration: underline; }
 <tr><td colspan="2">
 <table class="aws_data" border="1" cellpadding="2" cellspacing="0" width="100%">
 <tr bgcolor="#ECECEC"><th colspan="2">Versions</th><th bgcolor="#66DDEE" width="80">Hits</th><th bgcolor="#66DDEE" width="80">Percent</th><th>&nbsp;</th></tr>
-<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>Windows</b></td><td><b>17470</b></td><td><b>29.1 %</b></td><td>&nbsp;</td></tr>
-<tr><td width="32"><img src="/awstatsicons/os/winxp.png" alt='' title='' /></td><td class="aws"><a href="http://www.microsoft.com/windowsxp/" title="Windows XP home page [new window]" target="_blank">Windows XP</a></td><td>301</td><td>0.5 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>Windows</b></td><td><b>19417</b></td><td><b>24.5 %</b></td><td>&nbsp;</td></tr>
+<tr><td width="32"><img src="/awstatsicons/os/winxp.png" alt='' title='' /></td><td class="aws"><a href="http://www.microsoft.com/windowsxp/" title="Windows XP home page [new window]" target="_blank">Windows XP</a></td><td>338</td><td>0.4 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
 <tr><td><img src="/awstatsicons/os/winvista.png" alt='' title='' /></td><td class="aws"><a href="http://www.microsoft.com/windowsvista/" title="Windows Vista home page [new window]" target="_blank">Windows Vista</a></td><td>35</td><td>0 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
-<tr><td><img src="/awstatsicons/os/winnt.png" alt='' title='' /></td><td class="aws"><a href="http://support.microsoft.com/default.aspx?pr=ntw40" title="Windows NT support page [new window]" target="_blank">Windows NT</a></td><td>211</td><td>0.3 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
-<tr><td><img src="/awstatsicons/os/win2008.png" alt='' title='' /></td><td class="aws"><a href="http://www.microsoft.com/windowsserver2008/" title="Windows 2008 home page [new window]" target="_blank">Windows 2008</a></td><td>16923</td><td>28.1 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="106" height="5" /><br /></td></tr>
-<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>Linux</b></td><td><b>42058</b></td><td><b>70 %</b></td><td>&nbsp;</td></tr>
-<tr><td><img src="/awstatsicons/os/linuxandroid.png" alt='' title='' /></td><td class="aws"><a href="http://code.google.com/android/" title="Google Android home page [new window]" target="_blank">Google Android</a></td><td>160</td><td>0.2 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
-<tr><td><img src="/awstatsicons/os/linux.png" alt='' title='' /></td><td class="aws">GNU Linux (Unknown or unspecified distribution)</td><td>41898</td><td>69.7 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="261" height="5" /><br /></td></tr>
-<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>Macintosh</b></td><td><b>498</b></td><td><b>0.8 %</b></td><td>&nbsp;</td></tr>
-<tr><td><img src="/awstatsicons/os/macosx.png" alt='' title='' /></td><td class="aws"><a href="http://www.apple.com/macosx/" title="Mac OS X home page [new window]" target="_blank">Mac OS X</a></td><td>498</td><td>0.8 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="4" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/os/winunknown.png" alt='' title='' /></td><td class="aws">Windows (unknown version)</td><td>2</td><td>0 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="2" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/os/winnt.png" alt='' title='' /></td><td class="aws"><a href="http://support.microsoft.com/default.aspx?pr=ntw40" title="Windows NT support page [new window]" target="_blank">Windows NT</a></td><td>413</td><td>0.5 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="3" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/os/win2008.png" alt='' title='' /></td><td class="aws"><a href="http://www.microsoft.com/windowsserver2008/" title="Windows 2008 home page [new window]" target="_blank">Windows 2008</a></td><td>18629</td><td>23.5 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="107" height="5" /><br /></td></tr>
+<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>Linux</b></td><td><b>46056</b></td><td><b>58.2 %</b></td><td>&nbsp;</td></tr>
+<tr><td><img src="/awstatsicons/os/linuxandroid.png" alt='' title='' /></td><td class="aws"><a href="http://code.google.com/android/" title="Google Android home page [new window]" target="_blank">Google Android</a></td><td>539</td><td>0.6 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="4" height="5" /><br /></td></tr>
+<tr><td><img src="/awstatsicons/os/linux.png" alt='' title='' /></td><td class="aws">GNU Linux (Unknown or unspecified distribution)</td><td>45517</td><td>57.6 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="261" height="5" /><br /></td></tr>
+<tr bgcolor="#F6F6F6"><td class="aws" colspan="2"><b>Macintosh</b></td><td><b>13530</b></td><td><b>17.1 %</b></td><td>&nbsp;</td></tr>
+<tr><td><img src="/awstatsicons/os/macosx.png" alt='' title='' /></td><td class="aws"><a href="http://www.apple.com/macosx/" title="Mac OS X home page [new window]" target="_blank">Mac OS X</a></td><td>13530</td><td>17.1 %</td><td class="aws"><img src="/awstatsicons/other/hh.png" width="78" height="5" /><br /></td></tr>
 </table></td></tr></table><br />
 
 <br /><br />
